--- a/primer_parcial/styles.css
+++ b/primer_parcial/styles.css
@@ -41,6 +41,7 @@ nav ul {
 
 nav ul li {
     margin: 0 1%;
+    height: 200;
 }
 
 nav ul li a {
@@ -80,44 +81,44 @@ nav ul li a:hover {
 
 #dns {
     border-top: 4px solid rgb(255, 0, 0);
-    background-color: rgba(255, 0, 0, 0.1);
+    background-color: rgba(255, 0, 0, 0.4);
     grid-column: 1;
     grid-row: 2 / span 2;
 }
 
 #html {
     border-top: 4px solid rgb(255, 0, 255);
-    background-color: rgba(255, 0, 255, 0.1);
+    background-color: rgba(255, 0, 255, 0.4);
     grid-column: 2;
     grid-row: 1 / span 2;
 }
 
 #tcpip {
     border-top: 4px solid rgb(255, 165, 0);
-    background-color: rgba(255, 165, 0, 0.1);
+    background-color: rgba(255, 165, 0, 0.4);
     grid-column: 3;
     grid-row: 2 / span 2;
 }
 
 #css {
     border-top: 4px solid rgb(0, 0, 255);
-    background-color: rgba(0, 0, 255, 0.1);
+    background-color: rgba(0, 0, 255, 0.4);
     grid-column: 2;
     grid-row: 3 / span 2;
 }
 
 #html_1 {
     border-top: 4px solid rgb(255, 0, 255);
-    background-color: rgba(255, 0, 255, 0.1);
+    background-color: rgba(255, 0, 255, 0.4);
     grid-column: 1 / span 4;
-    grid-row: 1;
+    grid-row: 1 / span 4;
 }
 
 #css_1 {
     border-top: 4px solid rgb(0, 0, 255);
-    background-color: rgba(0, 0, 255, 0.1);
+    background-color: rgba(0, 0, 255, 0.4);
     grid-column: 1 / span 4;
-    grid-row: 1;
+    grid-row: 1 / span 4;
 }
 
 footer {
